--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,3 +6,21 @@ body {
   font-family: "Noto Sans JP", sans-serif;
   font-size: 9px;
 }
+
+p {
+  margin: 0;
+  font-size: 1.4rem;
+  text-align: center;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+hr {
+  border-color: #fbf9f9;
+}
