--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -25,8 +25,7 @@ hr {
   border-color: #fbf9f9;
 }
 
-a {
-  text-decoration: none;
+.animated-link {
   background-image: linear-gradient(#8860d0, #8860d0);
   background-position: 0% 100%;
   background-repeat: no-repeat;
@@ -35,13 +34,19 @@ a {
   font-size: 1.6rem;
 }
 
-a:hover {
+a {
+  font-size: 1.6rem;
+  text-decoration: none;
+  color: #8860d0;
+}
+
+.animated-link:hover {
   background-size: 100% 2px;
   color: #8860d0;
 }
 
-a:link,
-a:visited {
+.animated-link:link,
+.animated-link:visited {
   color: #8860d0;
 }
 
