theming and unliking review

--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -11,10 +11,13 @@ sans-serif !default;
 //colors
 $primary: #8860d0;
 $primary-lighter: #C1C9E4;
+$primary-black: #796477;
 
 $secondary: #5580E9;
 $secondary-lighter: #5BB8EB;
 $secondary-lightest: #84CEEB;
+
+$review-color:#c1c9e4;
 
 $gold:#FEC936;
 $bronze:#CD7F32;
