--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,7 @@
 @charset 'UTF-8';
 
 // 1. Configuration and helpers
-@import 'abstracts/variables',
+@import './abstracts/variables',
 'abstracts/functions',
 'abstracts/mixins';
 
