--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -14,8 +14,9 @@ $primary-lighter: #C1C9E4;
 $primary-black: #796477;
 
 $secondary: #5580E9;
-$secondary-lighter: #5BB8EB;
-$secondary-lightest: #84CEEB;
+$secondary-light: #11c6ff;
+$secondary-light-dark: #5BB8EB;
+$secondary-light-lighter: #84CEEB;
 
 $review-color:#c1c9e4;
 
