search css tweaks

--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -4,8 +4,12 @@
   &-row {
     display: flex;
     // justify-content: space-between;
-    align-items: center;
+    // align-items: center;
     flex-direction: row;
+
+    &--center {
+      justify-content: center;
+    }
 
     &--between {
       justify-content: space-between;
@@ -46,4 +50,62 @@
 
 .container {
   padding: 10px;
+}
+
+
+.pill {
+  height: 27px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  margin-right: 5px;
+  padding: 0 10px;
+
+  &-round {
+    border-radius: 15px;
+  }
+
+  // width: 100px;
+  &-text {
+    margin: auto;
+    font-size: 14px;
+  }
+
+  &-secondary {
+    background-color: $secondary;
+    color: white;
+
+    &-open {
+      background-color: white;
+      color: $secondary;
+      border: 1px solid $secondary;
+
+      &:hover {
+        background-color: $secondary;
+        color: white;
+        cursor: pointer;
+      }
+    }
+  }
+
+  &-secondary-light {
+    background-color: $secondary-light;
+    color: white;
+
+  }
+
+  &-primary {
+    background-color: $primary;
+    color: white;
+
+  }
+
+}
+
+.primary {
+  color: $primary;
+}
+
+.text-center {
+  text-align: center;
 }
