--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,8 +20,9 @@
 //   'layout/footer';
 
 // 5. Components
-// @import
-//   'components/button';
+@import 'components/flex',
+'components/pill';
+
 
 // 6. Page-specific styles
 // @import
