comments and reviews2

--- a/assets/css/components/_flex.scss
+++ b/assets/css/components/_flex.scss
@@ -21,6 +21,10 @@
     justify-content: space-around;
   }
 
+  &--right {
+    justify-content: flex-end;
+  }
+
   &-row {
     display: flex;
     // justify-content: space-between;
