--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -9,3 +9,42 @@
 .text-center {
   text-align: center;
 }
+
+a {
+  color: $primary;
+
+}
+
+a:link,
+a:visited {
+  color: $primary;
+}
+
+//transition animation
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity .5s;
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+
+.slide-fade-enter-active {
+  transition: all .3s ease;
+}
+
+.slide-fade-leave-active {
+  transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+
+.slide-fade-enter,
+.slide-fade-leave-to
+
+/* .slide-fade-leave-active below version 2.1.8 */
+  {
+  transform: translateX(10px);
+  opacity: 0;
+}
