--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,7 +23,8 @@
 @import 'components/flex',
 'components/buttons',
 'components/form',
-'components/pill';
+'components/pill',
+'components/text';
 
 
 // 6. Page-specific styles
