--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -37,14 +37,16 @@ a:visited {
 }
 
 .slide-fade-leave-active {
-  transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+  transition: transform .3s cubic-bezier(1.0, 0.5, 0.8, 1.0);
 }
 
-.slide-fade-enter,
-.slide-fade-leave-to
-
-/* .slide-fade-leave-active below version 2.1.8 */
-  {
+.slide-fade-enter {
   transform: translateX(10px);
+  opacity: 0;
+  // display: none;
+}
+
+.slide-fade-leave-to {
+  transform: translateX(-10px);
   opacity: 0;
 }
