--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,7 +24,9 @@
 'components/buttons',
 'components/form',
 'components/pill',
-'components/text';
+'components/text',
+'components/animation',
+'components/transition';
 
 
 // 6. Page-specific styles
