dashboard chapter toc

--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -11,7 +11,7 @@
   box-sizing: border-box;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
 
   &:hover {
     cursor: pointer;
