--- a/assets/css/components/_transition.scss
+++ b/assets/css/components/_transition.scss
@@ -9,11 +9,11 @@
 }
 
 .slide-fade-enter-active {
-  transition: all .3s ease;
+  transition: all .1s ease-out;
 }
 
 .slide-fade-leave-active {
-  transition: transform .3s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+  transition: transform .1s cubic-bezier(1.0, 0.5, 0.8, 1.0);
 }
 
 .slide-fade-enter {
