--- a/assets/css/components/_transition.scss
+++ b/assets/css/components/_transition.scss
@@ -13,7 +13,8 @@
 }
 
 .slide-fade-leave-active {
-  transition: transform .1s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+  // transition: transform .1s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+  display: none;
 }
 
 .slide-fade-enter {
