new font new web

--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -1,5 +1,10 @@
 //typography
-$text-font-stack: "Noto Sans JP",
+$text-font-stack: "IBM Plex Sans",
+'Helvetica Neue',
+'Segoe UI',
+Helvetica,
+Verdana,
+Arial,
 sans-serif !default;
 
 
