--- a/assets/css/components/_transition.scss
+++ b/assets/css/components/_transition.scss
@@ -70,6 +70,31 @@
   animation-fill-mode: backwards;
 }
 
+.text-editor-up-enter-active {
+  animation: normalup 300ms ease-out;
+  // animation-direction: reverse;
+  animation-fill-mode: backwards;
+}
+
+.text-editor-up-leave-active {
+  animation: normalup 300ms ease-out;
+  animation-direction: reverse;
+  animation-fill-mode: backwards;
+}
+
+@keyframes normalup {
+
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
 @keyframes downUp {
   from {
     opacity: 0;
