review like initial change

--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -80,6 +80,12 @@
     background-color: $secondary;
     border: none;
 
+    &:hover {
+      background-color: white;
+      color: $secondary;
+      border: 1px solid $secondary;
+    }
+
     &--light {
       color: white;
       background-color: $secondary-light;
