--- a/assets/css/components/_transition.scss
+++ b/assets/css/components/_transition.scss
@@ -28,6 +28,31 @@
   // opacity: 0;
 }
 
+.drop-down-enter {
+  // transform: translateY(-10px)
+}
+
+.drop-down-enter-active {
+  animation: dropdown 100ms linear;
+  // transition: all 300ms;
+  // animation-direction: baanimation
+  animation-fill-mode: backwards;
+}
+
+@keyframes dropdown {
+  0% {
+    transform: translateY(-15px)
+  }
+
+  50% {
+    transform: translateY(-10px)
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
+}
+
 .chapter-enter-active {
   transition: all 300ms;
 }
@@ -47,13 +72,13 @@
 }
 
 .grow-shrink-enter-active {
-  animation: growShrink 300ms ease-out;
+  animation: growShrink 100ms ease-out;
   // animation-direction: reverse;
   animation-fill-mode: backwards;
 }
 
 .grow-shrink-leave-active {
-  animation: growShrink 300ms ease-out;
+  animation: growShrink 100ms ease-out;
   animation-direction: reverse;
   animation-fill-mode: backwards;
 }
@@ -106,6 +131,7 @@
     transform: scaleY(1) translateY(0px) translateX(0px);
   }
 }
+
 
 
 .grow-shrink-enter {}
