--- a/assets/css/components/_pill.scss
+++ b/assets/css/components/_pill.scss
@@ -1,10 +1,14 @@
 .pill {
   height: 27px;
-  border-radius: 5px;
+  // border-radius: 5px;
   display: flex;
   justify-content: center;
   margin-right: 5px;
   padding: 0 10px;
+
+  &--icon {
+    margin-right: 5px !important;
+  }
 
   &-round {
     border-radius: 15px;
