--- a/assets/css/components/_transition.scss
+++ b/assets/css/components/_transition.scss
@@ -65,29 +65,6 @@
   transition: transform 300s;
 }
 
-.list-complete-item {
-  transition: all 1s;
-  display: inline-block;
-  margin-right: 10px;
-}
-
-.list-complete-move {
-  transition: transform 1s;
-}
-
-.list-complete-enter,
-.list-complete-leave-to
-
-/* .list-complete-leave-active below version 2.1.8 */
-  {
-  opacity: 0;
-  transform: translateY(30px);
-}
-
-.list-complete-leave-active {
-  position: absolute;
-}
-
 .chapter-move {
   opacity: 0;
   transform: translateX(100px);
@@ -205,4 +182,36 @@
     transform: scaleX(1);
     opacity: 1;
   }
+}
+
+
+.slide-in {
+
+  &-move {
+    transition: opacity .5s linear, transform .5s ease-in-out;
+  }
+
+  &-leave-active {
+    transition: opacity .4s linear, transform .4s cubic-bezier(.5, 0, .7, .4); //cubic-bezier(.7,0,.7,1); 
+    transition-delay: calc(0.1s * (var(--total) - var(--i)));
+  }
+
+  &-enter-active {
+    transition: opacity .5s linear, transform .5s cubic-bezier(.2, .5, .1, 1);
+    transition-delay: calc(0.1s * var(--i));
+  }
+
+  &-enter,
+  &-leave-to {
+    opacity: 0;
+  }
+
+  &-enter {
+    transform: translateX(-1em);
+  }
+
+  &-leave-to {
+    transform: translateX(1em);
+  }
+
 }
