--- a/assets/css/components/_animation.scss
+++ b/assets/css/components/_animation.scss
@@ -42,11 +42,11 @@
 
   @keyframes erotoright {
     from {
-      transform: translateX(0px) translateY(-100px);
+      transform: translateX(0px) translateY(-10px) scale(0);
     }
 
     to {
-      transform: translateX(0) translateY(0px);
+      transform: translateX(0) translateY(0px) scale(1);
       // height: 100%;
     }
   }
