book auth some stuff

--- a/assets/css/components/_form.scss
+++ b/assets/css/components/_form.scss
@@ -73,10 +73,10 @@
 
   &:hover {
     cursor: pointer;
-    transform: translateY(-1px)
+    // transform: translateY(-1px)
   }
 
   &:active {
-    transform: translateY(0.5px)
+    // transform: translateY(0.5px)
   }
 }
