--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -66,11 +66,11 @@
     &--open {
       background-color: white;
       border: 1px solid $primary;
-      color: $primary;
+      color: $primary !important;
 
       &:hover {
         background-color: $primary;
-        color: white;
+        color: white !important;
       }
     }
   }
