--- a/assets/css/components/_transition.scss
+++ b/assets/css/components/_transition.scss
@@ -3,6 +3,27 @@
   transition: opacity .5s;
 }
 
+.fade {
+  &-enter {
+    opacity: 0;
+
+    &-active {
+      transition: opacity .5s;
+    }
+  }
+
+  &-leave {
+    opacity: 0;
+
+    &-active {
+      transition: opacity .5s;
+    }
+
+    &-to {}
+  }
+
+}
+
 .fade-enter,
 .fade-leave-to {
   opacity: 0;
@@ -34,8 +55,6 @@
 
 .drop-down-enter-active {
   animation: dropdown 100ms linear;
-  // transition: all 300ms;
-  // animation-direction: baanimation
   animation-fill-mode: backwards;
 }
 
