photo upload fix

--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -50,7 +50,7 @@ body {
 
 @media screen and (max-width: 1136px) {
   .page-padding {
-    padding: 10px 0 !important;
+    padding: 10px 5rem !important;
   }
 }
 
