review sorting and some bug fix

--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -60,13 +60,13 @@ body {
   }
 }
 
-@media (prefers-color-scheme: dark) {
+// @media (prefers-color-scheme: dark) {
 
-  /* Overrides for Dark Mode. */
-  body {
-    color: white;
-    background: black;
-  }
-}
+//   /* Overrides for Dark Mode. */
+//   body {
+//     color: white;
+//     background: black;
+//   }
+// }
 
 //transition animation
