bug fixes here and there

--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -7,6 +7,7 @@
   // color: black;
   // border-radius: 10px;
   // margin: auto;
+  border-radius: 0.4rem;
   padding: 5px;
   box-sizing: border-box;
   display: flex;
