--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,7 +26,7 @@
 'components/pill',
 'components/text',
 'components/animation',
-'components/transition';
+'components/transition', 'components/dialog';
 
 
 // 6. Page-specific styles
