--- a/assets/css/components/_dialog.scss
+++ b/assets/css/components/_dialog.scss
@@ -12,8 +12,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    // background-color: ;
 
     #{$self}__content {
+      padding: 2rem;
       -webkit-box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
         0 18px 36px -18px rgba(0, 0, 0, 0.3),
         0 -12px 36px -8px rgba(0, 0, 0, 0.025);
@@ -21,6 +23,17 @@
         0 18px 36px -18px rgba(0, 0, 0, 0.3),
         0 -12px 36px -8px rgba(0, 0, 0, 0.025);
       border-radius: 0.4rem;
+      background-color: #fff;
+      pointer-events: auto;
+
+      // &::before {
+      //   content: "12";
+      //   position: absolute;
+      //   width: 100%;
+      //   height: 100%;
+      //   top: 0;
+      //   left: 0;
+      // }
     }
   }
 }
