cover and banner

--- a/assets/css/components/_flex.scss
+++ b/assets/css/components/_flex.scss
@@ -32,7 +32,7 @@
     flex-direction: row;
     // background-color: black;
 
-    &-reverse {
+    &--reverse {
       display: flex;
       align-items: center;
       flex-direction: row-reverse;
