--- a/assets/css/components/_dialog.scss
+++ b/assets/css/components/_dialog.scss
@@ -1,12 +1,20 @@
 .dialog {
   $self: &;
 
+  @media screen and (max-width:450px) {
+    #{$self}__content {
+      width: 100vw !important;
+      height: 100vh !important;
+    }
+
+  }
+
   &__container {
     width: 100%;
     height: 100%;
     position: fixed;
     border: none;
-    z-index: 6;
+    z-index: 2000;
     left: 0;
     top: 0;
     display: flex;
