--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -5,3 +5,9 @@ html {
   // line-height: 28px;
   -webkit-font-smoothing: auto;
 }
+
+
+
+// html {
+//   @include fluid-type($min_width, $max_width, $min_font, $max_font);
+// }
