--- a/assets/css/components/_dialog.scss
+++ b/assets/css/components/_dialog.scss
@@ -5,6 +5,7 @@
     #{$self}__content {
       width: 100vw !important;
       height: 100vh !important;
+      padding: 1rem !important;
     }
 
   }
