--- a/assets/css/components/_animation.scss
+++ b/assets/css/components/_animation.scss
@@ -141,6 +141,44 @@
   }
 }
 
+@keyframes grows {
+  0% {
+    transform: translateY(-10px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.grow-shrink {
+  &-enter {
+    // transform: translateY(10px);
+    // opacity: 0;
+
+    &-active {
+      animation: grows 200ms ease;
+    }
+  }
+
+  &-leave {
+    // opacity: 0;
+
+    &-active {
+      animation: grows 200ms ease;
+      animation-direction: reverse;
+      animation-fill-mode: backwards;
+    }
+
+    &-to {
+      // opacity: 1;
+      // transform: translateY(-10px);
+    }
+  }
+}
+
 .slide-left {
   @keyframes slide-down {
     from {
@@ -158,6 +196,7 @@
     &-active {
       transition: 300ms;
     }
+
   }
 
   &-leave {
