--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -6,6 +6,17 @@ html {
   -webkit-font-smoothing: auto;
 }
 
+// @media and 
+
+
+@media screen and (max-width: 450px) {
+
+  *,
+  html {
+    font-size: 11px;
+    // line-height: 28px;
+  }
+}
 
 
 // html {
