--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -18,7 +18,7 @@ $primary: #8860d0;
 $primary-lighter: #C1C9E4;
 $primary-black: #796477;
 
-$secondary: #5580E9;
+$secondary: #556CD6;
 $secondary-light: #11c6ff;
 $secondary-light-dark: #5BB8EB;
 $secondary-light-lighter: #84CEEB;
