--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -6,18 +6,36 @@ html {
   -webkit-font-smoothing: auto;
 }
 
-// @media and 
+// @media and
 
-
-@media screen and (max-width: 450px) {
+@media screen and (min-width:1920px) {
 
   *,
   html {
-    font-size: 11px;
+    font-size: 13px;
     // line-height: 28px;
   }
 }
 
+// @media screen and (max-width: 450px) {
+
+//   *,
+//   html {
+//     font-size: 11px;
+//     // line-height: 28px;
+//   }
+// }
+
+@media screen and (max-width:450px) {
+
+  *,
+  html {
+    font-size: calc(10px + (14 - 10) * ((100vw - 300px) / (450 - 300)));
+    // line-height: 28px;
+  }
+
+
+}
 
 // html {
 //   @include fluid-type($min_width, $max_width, $min_font, $max_font);
