--- a/assets/css/components/_text.scss
+++ b/assets/css/components/_text.scss
@@ -1,4 +1,10 @@
 .text {
+  &--overflow {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
   &--small {
     font-size: 12px;
   }
