--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -35,6 +35,16 @@ html {
   }
 }
 
+@media screen and (min-width:1440px) {
+
+  *,
+  html {
+    // font-size: 11px;
+    // line-height: 28px;
+  }
+}
+
+// @media
 
 // @media screen and (max-width:1080px) {
 
