navigation and themeing

--- a/assets/css/themes/_default.scss
+++ b/assets/css/themes/_default.scss
@@ -10,7 +10,7 @@ $themes: (default:(backgroundColor:#dae0e6,
     selectSelectedFontColor: #f4648a,
     selectBackgroundColor:white,
     activeLinkTextColor:$secondary,
-
+    modalBackgroundColor:white,
   ),
   'tan': (backgroundColor:(#fff7cc url("~assets/img/noise-tan-all.png")),
     textBackgroundColor:(#eae2b9),
@@ -24,6 +24,7 @@ $themes: (default:(backgroundColor:#dae0e6,
     selectSelectedFontColor: #f4648a,
     selectBackgroundColor:(#eae2b9),
     activeLinkTextColor:$secondary,
+    modalBackgroundColor:(#eae2b9),
   ),
   'black': (backgroundColor:#030303,
     textBigBackgroundColor:rgb(26, 26, 27),
@@ -37,6 +38,6 @@ $themes: (default:(backgroundColor:#dae0e6,
     selectSelectedFontColor: #f4648a,
     selectBackgroundColor:rgb(0, 0, 0),
     activeLinkTextColor:$secondary,
-  ),
+    modalBackgroundColor:#19191A),
 
 );
