small design changes

--- a/assets/css/themes/_default.scss
+++ b/assets/css/themes/_default.scss
@@ -2,6 +2,8 @@ $themes: (default:(backgroundColor:#dae0e6,
     textColor: black,
     textBackgroundColor:white,
     textBigBackgroundColor:white,
+    textLightColor:#878A8C,
+    textHoverLightColor:#f5f9fd,
     textBoxBorderColor: #cecece,
     boxShadow: (0 7px 14px 0 rgba(60, 66, 87, 0.1), 0 3px 6px 0 rgba(0, 0, 0, 0.07)),
     noise:none,
@@ -17,6 +19,8 @@ $themes: (default:(backgroundColor:#dae0e6,
     textBigBackgroundColor:(#eae2b9 url("~assets/img/tanContainer.png")),
     textBoxBorderColor:white,
     textColor: black,
+    textLightColor:#878A8C,
+    textHoverLightColor:#f5f9fd,
     boxShadow: (0 7px 14px 0 rgba(60, 66, 87, 0.1), 0 3px 6px 0 rgba(0, 0, 0, 0.07)),
     noise:'url("~assets/img/noise-tan-all.png")',
     textNoise:'url("~assets/img/tanContainer.png")',
@@ -31,6 +35,8 @@ $themes: (default:(backgroundColor:#dae0e6,
     textBackgroundColor:rgb(26, 26, 27),
     textBoxBorderColor:white,
     textColor: rgb(215, 218, 220),
+    textLightColor:#818384,
+    textHoverLightColor:#030303,
     boxShadow:1px 3px 5px 0px rgba(26, 26, 26, 1),
     noise:none,
     textNoise:none,
