--- a/assets/css/themes/_default.scss
+++ b/assets/css/themes/_default.scss
@@ -13,7 +13,8 @@ $themes: (default:(backgroundColor:#dae0e6,
     selectBackgroundColor:white,
     activeLinkTextColor:$secondary,
     modalBackgroundColor:white,
-  ),
+    modalContainerColor:#F6F9FB,
+    modalHeaderBackgroundColor:white),
   'tan': (backgroundColor:(#fff7cc url("~assets/img/noise-tan-all.png")),
     textBackgroundColor:(#eae2b9),
     textBigBackgroundColor:(#eae2b9 url("~assets/img/tanContainer.png")),
@@ -29,7 +30,8 @@ $themes: (default:(backgroundColor:#dae0e6,
     selectBackgroundColor:(#eae2b9),
     activeLinkTextColor:$secondary,
     modalBackgroundColor:(#eae2b9),
-  ),
+    modalContainerColor:#F6F9FB,
+    modalHeaderBackgroundColor:#fff7cc),
   'black': (backgroundColor:#030303,
     textBigBackgroundColor:rgb(26, 26, 27),
     textBackgroundColor:rgb(26, 26, 27),
@@ -44,6 +46,6 @@ $themes: (default:(backgroundColor:#dae0e6,
     selectSelectedFontColor: #f4648a,
     selectBackgroundColor:rgb(0, 0, 0),
     activeLinkTextColor:$secondary,
-    modalBackgroundColor:#19191A),
-
-);
+    modalBackgroundColor:(#19191A),
+    modalContainerBackgroundColor:#2E2C30,
+    modalHeaderBackgroundColor:#1E1C21));
