alot of bug fixes

--- a/assets/css/themes/_default.scss
+++ b/assets/css/themes/_default.scss
@@ -39,7 +39,7 @@ $themes: (default:(backgroundColor:#dae0e6,
     textColor: rgb(215, 218, 220),
     textLightColor:#818384,
     textHoverLightColor:#030303,
-    boxShadow:1px 3px 5px 0px rgba(26, 26, 26, 1),
+    boxShadow:(0 -2px 10px rgba(0, 0, 0, 1)),
     noise:none,
     textNoise:none,
     selectFontColor:rgb(215, 218, 220),
