--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -33,7 +33,7 @@ a:visited {
 
 .site-logo {
   padding: 2px 8px;
-  font-size: 2rem;
+  font-size: 20px;
   height: 100%;
   // min-width: 10rem;
 
@@ -61,10 +61,9 @@ body {
 
 * {
   -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  font-feature-settings: "pnum";
-  font-variant-numeric: proportional-nums;
 }
 
 .page-padding {
